# polebrowse-tauri

./: .gitignore  Cargo.toml  build.rs  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml
