[package]
name = "polebrowse"
version = "1.0.0"
description = "A feature-rich browser built with Tauri"
authors = ["RidelLazor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["default"] }
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "polebrowse"
path = "src-tauri-src/main.rs"
